[package]
name = "atomic_pincell"
version = "0.1.0"
authors = ["m-mueller678","Bobby Holley <bobbyholley@gmail.com>"]
description = "Threadsafe pinnable RefCell"
license = "Apache-2.0/MIT"
repository = "https://github.com/m-mueller678/atomic_refcell"
edition = "2021"
readme = "README.md"
categories = ["no-std::no-alloc","concurrency","rust-patterns","asynchronous"]
keywords = ["refcell","atomic","mutex","atomic","pin"]

[dependencies]
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = "1.0"

[features]
default = []
serde = ["dep:serde"]
